updated sessionInfo